--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,13 @@ hex = { version = "0.4.3", features = ["serde"] }
 zombiezen-zmq = { path = "./zombiezen-zmq" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+hmac = "0.12.1"
+sha2 = "0.10.7"
+uuid = "1.4.1"
+rand = "0.8.5"
+chrono = { version = "0.4.26", features = ["serde"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
 
 [workspace]
 
