--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.75"
 chrono = { version = "0.4.26", features = ["serde"] }
 clap = { version = "4.4.0", features = ["derive"] }
+csv = "1.2.2"
 hex = { version = "0.4.3", features = ["serde"] }
 hmac = "0.12.1"
 rand = "0.8.5"
