--- a/libzmq-sys/Cargo.toml
+++ b/libzmq-sys/Cargo.toml
@@ -3,6 +3,7 @@ name = "libzmq-sys"
 version = "0.1.0"
 edition = "2021"
 links = "libzmq"
+license = "LGPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
