--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v22
       - name: nix flake check
-        run: nix flake check
+        run: nix flake check --print-build-logs
 
 permissions:
   contents: read
