--- a/zombiezen-sqlite/Cargo.toml
+++ b/zombiezen-sqlite/Cargo.toml
@@ -13,3 +13,6 @@ libsqlite3-sys = { version = "0.26.0", features = ["buildtime_bindgen"] }
 [build-dependencies]
 cc = "1.0.83"
 pkg-config = "0.3.27"
+
+[dev-dependencies]
+zombiezen-const-cstr = "1.0.0"
