--- a/zombiezen-sqlite/Cargo.toml
+++ b/zombiezen-sqlite/Cargo.toml
@@ -8,6 +8,8 @@ license = "Apache-2.0"
 
 [dependencies]
 bitflags = "2.4.0"
+dashmap = "5.5.3"
+lazy_static = "1.4.0"
 libsqlite3-sys = { version = "0.26.0", features = ["buildtime_bindgen"] }
 
 [build-dependencies]
