--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tempdir = "0.3.7"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 uuid = "1.4.1"
+zombiezen-const-cstr = "1.0.0"
 zombiezen-sqlite = { path = "./zombiezen-sqlite" }
 zombiezen-zmq = { path = "./zombiezen-zmq" }
 
