Add bindings for RE2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,9 @@ zombiezen-zmq = { path = "./zombiezen-zmq" }
 
 members = [
   ".",
+  "libcre2-sys",
   "libzmq-sys",
+  "re2",
   "zombiezen-sqlite",
   "zombiezen-zmq",
 ]
