--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ csv = "1.2.2"
 hex = { version = "0.4.3", features = ["serde"] }
 hmac = "0.12.1"
 rand = "0.8.5"
+re2 = { path = "./re2" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10.7"
