--- a/zombiezen-sqlite/Cargo.toml
+++ b/zombiezen-sqlite/Cargo.toml
@@ -11,6 +11,7 @@ bitflags = "2.4.0"
 dashmap = "5.5.3"
 lazy_static = "1.4.0"
 libsqlite3-sys = { version = "0.26.0", features = ["buildtime_bindgen"] }
+zombiezen-const-cstr = "1.0.0"
 
 [build-dependencies]
 cc = "1.0.83"
