--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ re2 = { path = "./re2" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10.7"
-tempdir = "0.3.7"
+tempfile = "3.8.0"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 uuid = "1.4.1"
