--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10.7"
 tempfile = "3.8.0"
+time = "0.3.28"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 uuid = "1.4.1"
